_includes/beatrice/01-atoms/01-typography/_01-typography.scss
// Text styles
// =============================================================================

:root {
  --vf-support: false;
  @supports (font-variation-settings: normal) {
    --vf-support: true;
  }
}

:root {
  /* text-size proportional spacer */
  --body-text-spacer: 1rem;
  @media screen and (min-width: $bp--medium) {
    --body-text-spacer: 1.125rem;
  }  
  @media screen and (min-width: $bp--xxlarge) {
    --body-text-spacer: 1.25rem;
  }  

  --color-background: #ffffff;
  --color-text: #{$color-text};
  --color-text-callout: #{$color-gray-700};
  --color-text-highlight: #{$color-text-highlight};
  --color-text-highlight-secondary: #{$color-text-highlight-secondary};
  --color-callout-highlight: #{darken($color-blue-50, 2.5%)};
  --color-callout-highlight-secondary: #{lighten($color-blue-50, 2.5%)};
  --color-callout-highlight-alt: #{darken($color-blue-100, 2.5%)};
  --color-callout-highlight-alt-secondary: #{lighten($color-blue-100, 2.5%)};
  --color-card-border: #{$color-card-border};
  --color-text-menu-link: #{$color-gray-750};
  --color-text-link: #{$color-text-link};
  --color-text-link-visited: #{$color-text-link-visited};
  --color-text-link-hover: #{$color-text-link-hover};
  --color-text-link-active: #{$color-text-link-active};
  --color-text-link-focus: #{$color-text-link-focus};
  --color-text-link-active-trail: #{$color-text-link-active-trail};
  --color-prettify-lit: #{$color-blue-900};
  --color-prettify-pln: #{$color-text};
  --color-prettify-pun: #{$color-gray-900};
  --color-prettify-str: #{$color-blue-900};
  --color-prettify-typ: #{$color-blue-900};
  --header-background-gray-light: #{$header-background-gray-light};
  --header-background-gray-lighter: #{$header-background-gray-lighter};
  --header-background-blue-lighter: #{$header-background-blue-lighter};
  --color-slider-group-background: #{$color-slider-group-background};
  --color-hero-sidebar: #{$color-gray-200};

  @media (prefers-color-scheme:dark) {
    --color-background: #{$color-gray-900};
    --color-text: #ffffff;
    --color-text-callout: #{$color-gray-200};
    --color-text-highlight: #{$color-gray-800};
    --color-text-highlight-secondary: #{$color-gray-700};
    --color-callout-highlight: #{darken($color-gray-700, 2.5%)};
    --color-callout-highlight-secondary: #{lighten($color-gray-700, 2.5%)};
    --color-callout-highlight-alt: #{darken($color-gray-800, 5%)};
    --color-callout-highlight-alt-secondary: #{lighten($color-gray-800, 2.5%)};
    --color-card-border: #{$color-gray-600};
    --color-text-menu-link: #{$color-gray-200};
    --color-text-link: #{$color-blue-100};
    --color-text-link-visited: #{$color-blue-100};
    --color-text-link-hover: #{lighten($color-text-link-hover, 10%)};
    --color-text-link-active: #{$color-text-link-active};
    --color-text-link-active-trail: #ffffff;
    --color-text-link-focus: #{$color-text-link-focus};
    --color-prettify-lit: #{$color-blue-200};
    --color-prettify-pln: var(--color-text);
    --color-prettify-pun: #{$color-gray-200};
    --color-prettify-str: #{$color-blue-100};
    --color-prettify-typ: #{$color-blue-100};
    --header-background-gray-light: #{rgba($header-background-gray-light,.15)};
    --header-background-gray-lighter: #{rgba($header-background-gray-lighter,.15)};
    --header-background-blue-lighter: #{rgba($color-blue-900,.15)};
    --color-slider-group-background: #{$color-gray-800};
    --color-hero-sidebar: #{$color-gray-800};
    .aside {
      --color-text-highlight: #{$color-gray-700};
    }
    .range__axis.range__axis--width {
      --color-callout-highlight: #{darken($color-lavender-light,80%)};
    }
    .range__axis.range__axis--italic {
      --color-callout-highlight: #{darken($color-yellow-light,70%)};
    }
    .range__axis.range__axis--slant {
      --color-callout-highlight: #{darken($color-green-light,80%)};
    }
    .range__axis.range__axis--width {
      --color-callout-highlight: #{darken($color-lavender-light,80%)};
    }
    .range__axis.range__axis--italic {
      --color-callout-highlight: #{darken($color-yellow-light,70%)};
    }
    .range__axis.range__axis--slant {
      --color-callout-highlight: #{darken($color-green-light,80%)};
    }
    .range__axis.range__axis--opsz-auto {
      --color-callout-highlight: #{darken($color-gray-700, 2.5%)};
    }
    .range__axis.range__axis--opsz {
      --color-callout-highlight: #{darken($color-lavender-light,80%)};
    }
    .range__axis.range__axis--grade {
      --color-callout-highlight: #{darken($color-yellow-light,70%)};
    }
    .range__axis.range__axis--casual {
      --color-callout-highlight: #{darken($color-green-light,80%)};
    }
    .range__axis.range__axis--ascender-descender {
      --color-callout-highlight: #{darken($color-lavender-light,80%)};
    }
    [data-wght-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-wght,70%)};
    }
    [data-wdth-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-wdth,70%)};
    }
    [data-ital-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-ital,70%)};
    }
    [data-slnt-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-slnt,70%)};
    }
    [data-opsz-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-opsz,70%)};
    }
    [data-casl-active="true"]  {
      --color-callout-highlight: #{darken($color-callout-casl,70%)};
    }
  }
}
/* ... */

